--- a/msp.html
+++ b/msp.html
@@ -14,8 +14,8 @@
         <title   >MSP</title>
        
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
-        <link href="../css/cm.css" rel="stylesheet" type="text/css">
-        <link href="../css/msp.css" rel="stylesheet" type="text/css">
+        <link href="cm.css" rel="stylesheet" type="text/css">
+        <link href="msp.css" rel="stylesheet" type="text/css">
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
          <link
          rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
